--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -12,9 +12,9 @@
     <ion-content class="outer-content">
 
       <ion-list>
-        <ion-list-header>
+        <!-- <ion-list-header>
           Navigate
-        </ion-list-header>
+        </ion-list-header> -->
         <button ion-item menuClose *ngFor="let p of appPages" (click)="openPage(p)">
           <ion-icon item-start [name]="p.icon" [color]="isActive(p)"></ion-icon>
           {{p.title}}
@@ -22,9 +22,9 @@
       </ion-list>
 
       <ion-list>
-        <ion-list-header>
+        <!-- <ion-list-header>
           Account
-        </ion-list-header>
+        </ion-list-header> -->
         <button ion-item menuClose *ngFor="let p of loggedOutPages" (click)="openPage(p)">
           <ion-icon item-start [name]="p.icon" [color]="isActive(p)"></ion-icon>
           {{p.title}}
@@ -32,9 +32,9 @@
       </ion-list>
 
       <ion-list>
-        <ion-list-header>
+        <!-- <ion-list-header>
           Tutorial
-        </ion-list-header>
+        </ion-list-header> -->
         <button ion-item menuClose (click)="openTutorial()">
           <ion-icon item-start name="hammer"></ion-icon>
           Show Tutorial
